# Camelot-Jr-solver

./: CMakeLists.txt  README.md  config.xml  package.xml
config/: nao_bottom_cam.yaml  nao_front_cam.yaml  ost.yaml  pepper_bottom_cam.yaml  pepper_front_cam.yaml  usb_cam.yaml
include/: BluePiece.h  Board.h  Chevalier.h  ConsolePrint.h  GamePlay.h  GreenPiece.h  OrangePiece.h  Piece.h  Princesse.h  PurplePiece.h  RedPiece.h  Transformation.h
include/camelot_jr/: Transformation.h
launch/: ArucoWebCam.launch  NaoCamelot.launch  NaoWithWebcamCamelot.launch  PepperCamelot.launch  test_launch.launch
msg/: MouveCoords.msg  PieceAction.msg
src/: BluePiece.cpp  Board.cpp  Chevalier.cpp  GamePlay.cpp  GreenPiece.cpp  OrangePiece.cpp  Piece.cpp  Princesse.cpp  PurplePiece.cpp  RedPiece.cpp  braccio_control.cpp  game_resolving.cpp  inverse_braccio.cpp  pieces_presentes.py  position_cubes.cpp  transform_broadcast.cpp
